# timecounter

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml
timecounter/: __init__.py  test_timecount.py
